--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.70.3",
     "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-image-picker": "^4.10.0",
     "react-native-radio-buttons-group": "^2.2.11",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
