--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^16.4.1",
     "@react-native-firebase/auth": "^16.4.1",
     "@react-native-firebase/firestore": "^16.4.1",
+    "@react-native-firebase/storage": "^16.4.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
@@ -25,6 +26,7 @@
     "react-native-radio-buttons-group": "^2.2.11",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
